fix: overflow from sign-up-form

--- a/src/sign-up-form/css/style.css
+++ b/src/sign-up-form/css/style.css
@@ -89,9 +89,8 @@ li {
   background-size: cover;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   justify-content: center;
-  min-height: 100vh;
   min-width: 40vw;
   position: relative;
 }
@@ -146,18 +145,25 @@ li {
   align-items: center;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   justify-content: center;
-  min-height: 100vh;
   width: 100%;
 }
 
 .form {
+  align-items: center;
   display: flex;
   flex-direction: column;
   height: 100%;
   justify-content: center;
+  overflow-y: scroll;
   width: 100%;
+}
+
+@media only screen and (max-height: 750px) {
+  .form {
+    justify-content: flex-start;
+  }
 }
 
 .form__header {
@@ -235,10 +241,10 @@ li {
   outline: none;
   padding-block: 0.5rem;
   padding-inline: 0.75rem;
+  width: 100%;
   transition:
     border-color var(--transition-delay),
     box-shadow var(--transition-delay);
-  width: 100%;
 }
 
 .form__input:focus {
